@@ -547,8 +547,7 @@
 <dd>
   <p>Applies a Gaussian blur to the input image.
   The passed parameter (the radius) defines the value of the standard deviation to the Gaussian function.
-  If no parameter is provided, then a value 0 is used. The parameter is
-  specified a CSS length, but does not accept percentage values.
+  The parameter is specified a CSS length, but does not accept percentage values.
   The markup equivalent of this function is <a href="#blurEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
   <p>The lacuna value for interpolation is ''0''.</p>
@@ -561,7 +560,6 @@
   A value of ''0%'' will create an image that is completely black. A value of ''100%'' leaves the
   input unchanged. Other values are linear multipliers on the effect.
   Values of amount over 100% are allowed, providing brighter results.
-  If the parameter is missing, a value of 100% is used.
   The markup equivalent of this function is <a href="#brightnessEquivalent">given below</a>.
   <p>The lacuna value for interpolation is ''100%''.</p>
 </dd>
@@ -570,7 +568,6 @@
   <p>Adjusts the contrast of the input.
   A value of ''0%'' will create an image that is completely gray. A value of ''100%'' leaves the
   input unchanged. Values of amount over 100% are allowed, providing results with less contrast.
-  If the parameter is missing, a value of 100% is used.
   The markup equivalent of this function is <a href="#contrastEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
   <p>The lacuna value for interpolation is ''100%''.</p>
@@ -596,7 +593,7 @@
   <p>Converts the input image to grayscale. The passed parameter defines the proportion
   of the conversion. A value of 100% is completely grayscale. A value of 0% leaves the
   input unchanged. Values between 0% and 100% are linear multipliers on the effect.
-  If the parameter is missing, a value of 100% is used.
+  Values of amount over 100% are allowed but UAs must clamp the values to 100%.
   The markup equivalent of this function is <a href="#grayscaleEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
   <p>The lacuna value for interpolation is ''100%''.</p>
@@ -617,7 +614,7 @@
   <p>Inverts the samples in the input image. The passed parameter defines the proportion
   of the conversion. A value of 100% is completely inverted. A value of 0% leaves the
   input unchanged. Values between 0% and 100% are linear multipliers on the effect.
-  If the parameter is missing, a value of 100% is used.
+  Values of amount over 100% are allowed but UAs must clamp the values to 100%.
   The markup equivalent of this function is <a href="#invertEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
   <p>The lacuna value for interpolation is ''100%''.</p>
@@ -628,7 +625,7 @@
   of the conversion. A value of 0% is completely transparent. A value of 100% leaves the
   input unchanged. Values between 0% and 100% are linear multipliers on the effect.
   This is equivalent to multiplying the input image samples by amount.
-  If the parameter is missing, a value of 100% is used.
+  Values of amount over 100% are allowed but UAs must clamp the values to 100%.
   The markup equivalent of this function is <a href="#opacityEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
   <p>The lacuna value for interpolation is ''100%''.</p>
@@ -642,7 +639,6 @@
   of the conversion. A value of 0% is completely un-saturated. A value of 100% leaves the
   input unchanged. Other values are linear multipliers on the effect.
   Values of amount over 100% are allowed, providing super-saturated results.
-  If the parameter is missing, a value of 100% is used.
   The markup equivalent of this function is <a href="#saturateEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
   <p>The lacuna value for interpolation is ''100%''.</p>
@@ -652,7 +648,7 @@
   <p>Converts the input image to sepia. The passed parameter defines the proportion
   of the conversion. A value of 100% is completely sepia. A value of 0 leaves the
   input unchanged. Values between 0% and 100% are linear multipliers on the effect.
-  If the parameter is missing, a value of 100% is used.
+  Values of amount over 100% are allowed but UAs must clamp the values to 100%.
   The markup equivalent of this function is <a href="#sepiaEquivalent">given below</a>.
   <p>Negative values are not allowed.</p>
   <p>The lacuna value for interpolation is ''100%''.</p>
