@@ -10,7 +10,7 @@
 
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-07-14 name=dcterms.date>
+  <meta content=2013-07-16 name=dcterms.date>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
@@ -33,14 +33,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 14 July 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 16 July 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dev.w3.org/fxtf/filters/">http://dev.w3.org/fxtf/filters/</a>
-     <!--http://www.w3.org/TR/2013/WD-filters-20130714/-->
+     <!--http://www.w3.org/TR/2013/WD-filters-20130716/-->
 
     <dt>Latest version:
 
@@ -1052,9 +1052,8 @@
    <dd>
     <p>Applies a Gaussian blur to the input image. The passed parameter (the
      radius) defines the value of the standard deviation to the Gaussian
-     function. If no parameter is provided, then a value 0 is used. The
-     parameter is specified a CSS length, but does not accept percentage
-     values. The markup equivalent of this function is <a
+     function. The parameter is specified a CSS length, but does not accept
+     percentage values. The markup equivalent of this function is <a
      href="#blurEquivalent">given below</a>.
 
     <p>Negative values are not allowed.
@@ -1073,9 +1072,8 @@
      image that is completely black. A value of ‘<code
      class=css>100%</code>’ leaves the input unchanged. Other values are
      linear multipliers on the effect. Values of amount over 100% are
-     allowed, providing brighter results. If the parameter is missing, a
-     value of 100% is used. The markup equivalent of this function is <a
-     href="#brightnessEquivalent">given below</a>.
+     allowed, providing brighter results. The markup equivalent of this
+     function is <a href="#brightnessEquivalent">given below</a>.
 
     <p>The lacuna value for interpolation is ‘<code
      class=css>100%</code>’.
@@ -1088,8 +1086,7 @@
      class=css>0%</code>’ will create an image that is completely gray. A
      value of ‘<code class=css>100%</code>’ leaves the input unchanged.
      Values of amount over 100% are allowed, providing results with less
-     contrast. If the parameter is missing, a value of 100% is used. The
-     markup equivalent of this function is <a
+     contrast. The markup equivalent of this function is <a
      href="#contrastEquivalent">given below</a>.
 
     <p>Negative values are not allowed.
@@ -1123,9 +1120,10 @@
     <p>Converts the input image to grayscale. The passed parameter defines
      the proportion of the conversion. A value of 100% is completely
      grayscale. A value of 0% leaves the input unchanged. Values between 0%
-     and 100% are linear multipliers on the effect. If the parameter is
-     missing, a value of 100% is used. The markup equivalent of this function
-     is <a href="#grayscaleEquivalent">given below</a>.
+     and 100% are linear multipliers on the effect. Values of amount over
+     100% are allowed but UAs must clamp the values to 100%. The markup
+     equivalent of this function is <a href="#grayscaleEquivalent">given
+     below</a>.
 
     <p>Negative values are not allowed.
 
@@ -1150,9 +1148,10 @@
     <p>Inverts the samples in the input image. The passed parameter defines
      the proportion of the conversion. A value of 100% is completely
      inverted. A value of 0% leaves the input unchanged. Values between 0%
-     and 100% are linear multipliers on the effect. If the parameter is
-     missing, a value of 100% is used. The markup equivalent of this function
-     is <a href="#invertEquivalent">given below</a>.
+     and 100% are linear multipliers on the effect. Values of amount over
+     100% are allowed but UAs must clamp the values to 100%. The markup
+     equivalent of this function is <a href="#invertEquivalent">given
+     below</a>.
 
     <p>Negative values are not allowed.
 
@@ -1167,9 +1166,10 @@
      parameter defines the proportion of the conversion. A value of 0% is
      completely transparent. A value of 100% leaves the input unchanged.
      Values between 0% and 100% are linear multipliers on the effect. This is
-     equivalent to multiplying the input image samples by amount. If the
-     parameter is missing, a value of 100% is used. The markup equivalent of
-     this function is <a href="#opacityEquivalent">given below</a>.
+     equivalent to multiplying the input image samples by amount. Values of
+     amount over 100% are allowed but UAs must clamp the values to 100%. The
+     markup equivalent of this function is <a href="#opacityEquivalent">given
+     below</a>.
 
     <p>Negative values are not allowed.
 
@@ -1193,8 +1193,7 @@
      of the conversion. A value of 0% is completely un-saturated. A value of
      100% leaves the input unchanged. Other values are linear multipliers on
      the effect. Values of amount over 100% are allowed, providing
-     super-saturated results. If the parameter is missing, a value of 100% is
-     used. The markup equivalent of this function is <a
+     super-saturated results. The markup equivalent of this function is <a
      href="#saturateEquivalent">given below</a>.
 
     <p>Negative values are not allowed.
@@ -1209,9 +1208,9 @@
     <p>Converts the input image to sepia. The passed parameter defines the
      proportion of the conversion. A value of 100% is completely sepia. A
      value of 0 leaves the input unchanged. Values between 0% and 100% are
-     linear multipliers on the effect. If the parameter is missing, a value
-     of 100% is used. The markup equivalent of this function is <a
-     href="#sepiaEquivalent">given below</a>.
+     linear multipliers on the effect. Values of amount over 100% are allowed
+     but UAs must clamp the values to 100%. The markup equivalent of this
+     function is <a href="#sepiaEquivalent">given below</a>.
 
     <p>Negative values are not allowed.
 
