@@ -1,6 +1,12 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-07-16  Dirk Schulze  <dschulze@adobe.com>
+- Be more explicit on parsing instructions for filter functions.
+
+2013-07-14  Dirk Schulze  <dschulze@adobe.com>
+- Explicitly state allowed ranges and lacuna values for filter functions.
+
 2013-07-09  Dirk Schulze  <dschulze@adobe.com>
 - Just support one shadow item for drop-shadow in the first level.
 
